# jira-mattermost

./: .env.example  .gitignore  AGENTS.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  DOCS_REFACTOR_PLAN.md  Dockerfile  README.md  REFACTOR_PLAN.md  docker-compose.example.yml  docker-compose.yml  docker-compose_prod.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: integration-reviewer.md  service-verifier.md  test-runner.md
.claude/skills/gate/: SKILL.md
.claude/skills/run-mm-jira-bot/: SKILL.md  driver.py
docs/: admin-ui.md  architecture.md  config.md  jira.md  operations.md  persistence.md  read-only.md  testing.md
docs/domains/: admin.md  alerts.md  debug.md  incidents.md  jira-sync.md  postmortem.md  thread-summary.md
docs/reference/: service-map.md
migrations/: 001_create_alert_tickets.sql  002_create_alert_feedback.sql  003_add_alert_title_to_alert_tickets.sql  004_add_postmortem_comment_added_to_alert_tickets.sql  005_add_episode_tracking_to_alert_tickets.sql  006_create_app_settings.sql  007_add_prod_incident_post_id_to_alert_tickets.sql
scripts/: gen_service_map.py
src/mm_jira_bot/: __init__.py  __main__.py  actions.py  admin_api.py  audit.py  capture.py  colors.py  config.py  debug_admin.py  domain.py  formatting.py  http.py  jira.py  jira_payload.py  llm.py  logging.py  mattermost.py  metrics.py  ops.py  postmortem.py  repository.py  retry.py  service.py  summary.py  web.py
src/mm_jira_bot/service/: __init__.py  _admin.py  _alerts.py  _debug.py  _incidents.py  _jira_sync.py  _postmortem.py  _shared.py  _thread_summary.py  coordinator.py
tests/: conftest.py  support.py  test_admin.py  test_admin_api.py  test_alerts.py  test_debug.py  test_http.py  test_incidents.py  test_jira_sync.py  test_logging.py  test_migrations.py  test_parsers_properties.py  test_postmortem.py  test_read_only.py  test_read_only_adoption.py  test_read_only_params.py  test_read_only_test_channels.py  test_repository.py  test_retry.py  test_service.py  test_service_infra.py  test_thread_summary.py  test_websocket_loop.py
web_ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
web_ui/src/: App.tsx  main.tsx
web_ui/src/api/: client.ts  types.ts
web_ui/src/auth/: TokenContext.tsx
web_ui/src/components/: EpisodeStream.tsx  Layout.tsx  LoginScreen.tsx  SlideOver.tsx  Toast.tsx  charts.tsx  ui.tsx
web_ui/src/lib/: format.ts  useApi.ts
web_ui/src/pages/: Alerts.tsx  Dashboard.tsx  Incidents.tsx  Logs.tsx  Settings.tsx
web_ui/src/styles/: index.css
