[project]
name = "mattermost-jira-incident-bot"
version = "0.1.0"
description = "Mattermost alert to Jira incident bot"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "psycopg[binary]>=3.2,<4",
  "SQLAlchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
  "websockets>=13,<16",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<2",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
