[project]
name = "mattermost-jira-incident-bot"
version = "0.1.0"
description = "Mattermost alert to Jira incident bot"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "psycopg[binary]>=3.2,<4",
  "SQLAlchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
  "websockets>=13,<16",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<2",
  "pytest-cov>=5,<8",
  "ruff>=0.6,<1",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Эти модули содержат длинные неразбиваемые литералы: встроенный CSS/HTML/JS
# debug-SPA и PM-шаблоны/хронологию инцидента на русском. Перенос строк сломал бы
# рендеринг/текст, поэтому E501 здесь отключён (формат строк кода обеспечивает ruff format).
"src/mm_jira_bot/debug_admin.py" = ["E501"]
"src/mm_jira_bot/jira_payload.py" = ["E501"]
"src/mm_jira_bot/postmortem.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mm_jira_bot"]
