[project]
name = "mattermost-jira-incident-bot"
version = "0.9.0"
description = "Mattermost alert to Jira incident bot"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "prometheus-client>=0.20,<1",
  "psycopg[binary]>=3.2,<4",
  "SQLAlchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
  "websockets>=13,<16",
]

[project.optional-dependencies]
test = [
  "hypothesis>=6,<7",
  "pyright[nodejs]>=1.1.410,<1.2",
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<2",
  "pytest-cov>=5,<8",
  "ruff>=0.6,<1",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mm_jira_bot = ["admin_static/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
include = ["src/mm_jira_bot", "tests"]
exclude = [
  "**/.pytest_cache",
  "**/.ruff_cache",
  "**/__pycache__",
  ".venv",
  "build",
  "dist",
]
extraPaths = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venv = ".venv"
venvPath = "."

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Эти модули содержат длинные неразбиваемые литералы: PM-шаблоны и хронологию
# инцидента на русском. Перенос строк сломал бы текст, поэтому E501 здесь отключён
# (формат строк кода обеспечивает ruff format).
"src/mm_jira_bot/jira_payload.py" = ["E501"]
"src/mm_jira_bot/postmortem.py" = ["E501"]
"src/mm_jira_bot/summary.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mm_jira_bot"]
